--- a/games/game-memory.html
+++ b/games/game-memory.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#FFD700">
-  <title>记忆游戏 - 宝可梦养成日记</title>
+  <title>记忆游戏 - 宠物养成日记</title>
   <link rel="stylesheet" href="../style.css">
   <style>
     .memory-game-container {
