--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#FFD700">
-  <title>宝可梦养成日记</title>
+  <title>宠物养成日记</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="game-screen" data-theme="day">
