--- a/games/game-dodge.html
+++ b/games/game-dodge.html
@@ -52,11 +52,11 @@
   <div class="phone-frame">
     <header class="game-header">
     <div class="game-header-left">
-      <button id="btn-back" class="pixel-btn small">←</button>
+      <button id="btn-back" class="back-btn">←</button>
     </div>
     <div class="game-header-center">
       <span class="game-title">躲避游戏</span>
-      <span class="game-score">积分: <span id="score">0</span></span>
+      <span class="game-score">🏆 <span id="score">0</span></span>
       <div class="game-pet-container" id="pet-container"></div>
     </div>
     <div class="game-header-right">
@@ -91,7 +91,7 @@
       <div class="game-end-rewards" id="rewards-info"></div>
       <div class="game-end-actions">
         <button class="pixel-btn primary" id="btn-restart">再来一局</button>
-        <button class="pixel-btn" id="btn-return">←</button>
+        <button class="back-btn" id="btn-return">←</button>
       </div>
     </div>
   </div>
