--- a/play.html
+++ b/play.html
@@ -12,7 +12,7 @@
 <body class="play-screen" data-theme="day">
   <div class="phone-frame">
     <header id="play-header">
-    <button id="btn-back" class="pixel-btn small back-btn">←</button>
+    <button id="btn-back" class="back-btn">←</button>
     <h2>和<span class="pet-name-placeholder"></span>玩耍</h2>
   </header>
   
