--- a/games/game-memory.html
+++ b/games/game-memory.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#FFD700">
+  <link rel="apple-touch-icon" href="../assets/icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../assets/icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/icon.png">
   <title>记忆游戏 - 宠物养成日记</title>
   <link rel="stylesheet" href="../style.css">
   <style>
@@ -82,7 +83,7 @@
       backface-visibility: hidden;
       -webkit-backface-visibility: hidden;
       transform: rotateY(0deg);
-      background: linear-gradient(135deg, var(--pixel-dark-gray) 0%, var(--border-color) 100%);
+      background: linear-gradient(135deg, var(--pixel-dark-gray) 0%, #2C3E50 100%);
       color: var(--pixel-white);
       font-size: 48px;
       font-weight: bold;
