--- a/game.html
+++ b/game.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#FFD700">
+  <link rel="apple-touch-icon" href="assets/icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon.png">
   <title>宠物养成日记</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -159,7 +160,7 @@
   
   <!-- 1. 聊天窗口 -->
   <div id="modal-chat" class="modal hidden">
-    <div class="modal-content">
+    <div class="modal-content wide">
       <div class="modal-header">
         <h3>与<span class="pet-name-placeholder"></span>聊天</h3>
         <button class="close-btn">×</button>
@@ -494,7 +495,7 @@
         <!-- 保存所有设置 -->
         <div class="setting-section">
           <div class="setting-item">
-            <button class="pixel-btn primary" id="save-all-settings-btn" style="width: 100%; font-size: 16px; padding: 12px;">💾 保存所有设置</button>
+            <button class="pixel-btn primary" id="save-all-settings-btn" style="width: 100%;">💾 保存所有设置</button>
           </div>
         </div>
         
