--- a/games/game-2048.html
+++ b/games/game-2048.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#FFD700">
+  <link rel="apple-touch-icon" href="../assets/icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../assets/icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/icon.png">
   <title>2048 - 宠物养成日记</title>
   <link rel="stylesheet" href="../style.css">
   <style>
@@ -187,7 +188,12 @@
     }
     
     .game-2048-controls {
-      display: none; /* 完全隐藏按钮，使用纯触屏操作 */
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: var(--space-xs);
+      margin-top: var(--space-xs);
+      max-width: 90%;
+      width: 100%;
     }
     
     /* 使用统一的按钮样式，已在style.css中定义 */
