--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#FFD700">
   <meta name="description" content="像素风宝可梦电子宠物养成游戏">
+  <link rel="apple-touch-icon" href="assets/icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon.png">
   <title>宠物养成日记 - 选择你的伙伴</title>
   <link rel="stylesheet" href="style.css">
 </head>
