--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div id="selection-container">
       <!-- Logo区域 -->
       <div id="game-logo">
-        <h1 class="pixel-title">宠物养成日记</h1>
-        <p class="subtitle">Pixel Pet Adventure</p>
+        <img src="assets/logo.svg" alt="宠物养成日记" id="logo-image">
       </div>
       
       <!-- 存档卡片网格 -->
