--- a/play.html
+++ b/play.html
@@ -52,6 +52,16 @@
           <h4>记忆游戏</h4>
           <p>记住图案顺序</p>
         </button>
+        <button class="game-card" data-game="snake">
+          <div class="game-icon">🐍</div>
+          <h4>贪吃蛇</h4>
+          <p>控制蛇吃食物</p>
+        </button>
+        <button class="game-card" data-game="whack">
+          <div class="game-icon">🔨</div>
+          <h4>打地鼠</h4>
+          <p>快速击打地鼠</p>
+        </button>
       </div>
     </div>
     
