--- a/games/game-brick.html
+++ b/games/game-brick.html
@@ -69,8 +69,8 @@
     </div>
   </header>
   
-  <div class="game-container">
-    <div style="display: flex; flex-direction: column; align-items: center; justify-content: flex-start; width: 100%; padding: var(--space-xs);">
+  <div class="game-container" style="align-items: flex-start; padding-top: var(--space-sm);">
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: flex-start; width: 100%; padding: var(--space-xs); margin-top: 0;">
       <canvas id="brick-canvas" class="game-canvas"></canvas>
       <div class="brick-info">
         <div class="brick-info-item">
