--- a/games/game-memory.html
+++ b/games/game-memory.html
@@ -14,11 +14,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      padding: var(--space-md);
+      justify-content: flex-start;
+      padding: var(--space-xs);
       width: 100%;
       max-width: 500px;
       margin: 0 auto;
+      margin-top: var(--space-sm);
     }
     
     .memory-grid {
@@ -175,7 +176,7 @@
     </div>
   </header>
   
-  <div class="game-container">
+  <div class="game-container" style="align-items: flex-start; padding-top: var(--space-sm);">
     <div class="memory-game-container">
       <div class="memory-grid" id="memory-grid"></div>
       <div class="memory-info">
