--- a/game.html
+++ b/game.html
@@ -83,6 +83,9 @@
       </div>
       <span class="stat-value">100</span>
     </div>
+    
+    <!-- 死亡警告区域 -->
+    <div id="death-warning" class="death-warning" style="display: none;"></div>
   </section>
   
   <!-- 主舞台区域 -->
